third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/rust_pinned.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/rust_pinned.rs:6:14
   |
 6 |         type Pinned;
   |              ^^^^^^ within `Pinned`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `Pinned`
  --> tests/ui/rust_pinned.rs:10:12
   |
10 | pub struct Pinned {
   |            ^^^^^^
note: required by a bound in `require_unpin`
  --> src/rust_type.rs
   |
   | pub fn require_unpin<T: ?Sized + Unpin>() {}
   |                                  ^^^^^ required by this bound in `require_unpin`
